--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -36,7 +36,7 @@ h1
 	+media('<mob-lg')
 		+font($font-size-h1--sm, $line-height-h1--sm)
 
-h2
+h2, .text-popup-title
 	+font($font-size-h2, $line-height-h2)
 
 	+media('<tab-lg')
