--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -79,6 +79,7 @@
 @import components/catalog-menu
 @import components/view-switcher
 @import components/news-list
+@import components/news-previews
 @import components/years
 @import components/map-site
 @import components/product-card
