--- a/src/sass/pages/_home.sass
+++ b/src/sass/pages/_home.sass
@@ -7,6 +7,11 @@ $main-section-max-width: 960px !default
 $main-section-max-width-lg: 960px !default
 
 .main-sections
+	.touchevents &
+		height: auto !important
+		transform: none !important
+		transition-duration: 0s !important
+
 	+media('<tab-lg')
 		height: auto !important
 		transform: none !important
