--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -91,7 +91,12 @@
 			width: 100%
 
 	+media('<mob-lg')
+		display: none
 		width: 100%
+
+		&.footer-add-info
+			display: block
+			text-align: center
 
 	& > *:last-child
 		margin-bottom: 0
