--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -113,8 +113,8 @@ $form-border-color: black !default
 $form-border-focus-color: $base-color !default
 $form-error-color: red !default
 $form-success-color: green !default
-$form-bottom-space: 1.5em !default
-$form-bottom-space--sm: 1.5em !default
+$form-bottom-space: 30px !default
+$form-bottom-space--sm: 30px !default
 $form-gap: 60px !default
 // ==================
 $form-font-size: 18px
