--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -55,16 +55,7 @@
 	background-color: transparent
 
 	.no-touchevents &:hover
-		background: $base-color
-		border-color: $base-color
-
-	// ea
-	.ea-site &
-		background-color: transparent
-
-		.no-touchevents &:hover
-			background: $base-color--ea
-			border-color: $base-color--ea
+		background-color: $bg-color-light
 
 // btn-more
 .btn-main
@@ -173,7 +164,7 @@
 				background-color: $text-color
 
 /* btn-outline
-.btn-outline
+.btn-outline, .btn-outline-alt
 	position: relative
 	+font-alt-bold
 	+font(14px, 24px)
@@ -199,13 +190,37 @@
 	.no-touchevents .ea-site &:hover
 		background-color: $base-color--ea
 
+//btn-default-alt
+.btn-outline-alt
+	+font-normal
+	font-size: 12px
+	color: $text-color
+	border: 1px solid $text-color
+	background-color: transparent
+
+	& > span
+		letter-spacing: normal
+
+	.no-touchevents &:hover
+		//background: $base-color
+		//border-color: $base-color
+		background-color: $bg-color-light
+
+// ea
+//.ea-site &
+	background-color: transparent
+
+	.no-touchevents &:hover
+		background: $base-color--ea
+		border-color: $base-color--ea
+
 // btn-with-icon
 .btn-with-icon
 	& > i, & > span
 		+display-inline-block-middle
 
 	& > i
-		margin-right: 5px
+		margin-right: 10px
 
 		svg
 			+display-inline-block-top
@@ -217,28 +232,42 @@
 
 // btn-with-arrow
 .btn-with-arrow
+	$arrow-width: 30px
+	$arrow-space: 10px
+
 	& > i, & > span
 		+display-inline-block-middle
 
 	& > i
 		position: relative
-		margin-left: 10px
+		margin-right: $arrow-space
 		+font(0, 0)
-		width: 30px
+		width: $arrow-width
 		height: 2px
 		background-color: $text-color
 
 		&::after
 			content: ""
 			position: absolute
-			left: 100%
+			left: 0
 			top: 50%
-			margin: -6px 0 0 -4px
-			+triangle(right, #{$text-color}, 6px, 1)
+			margin: -6px 0 0 -2px
+			+triangle(left, #{$text-color}, 6px, 1)
 
 	& > span
 		text-align: left
 		white-space: normal
+		width: calc(100% - #{$arrow-width} - #{$arrow-space})
+
+		& ~ i
+			margin-right: 0
+			margin-left: $arrow-space
+
+			&::after
+				left: 100%
+				margin-left: -4px
+				+triangle(right, #{$text-color}, 6px, 1)
+				border-right-width: 0
 
 /* button to site
 .btn-siblings
