--- a/src/sass/components/_providers.sass
+++ b/src/sass/components/_providers.sass
@@ -41,7 +41,7 @@
 		width: auto
 		max-width: 320px
 		+push-auto
-		padding: 30px 0
+		padding: 40px 0
 
 	&::before
 		+pseudo($content: counter(section))
@@ -146,7 +146,7 @@
 
 	+media('<desk-sb')
 		padding: 15px 20px
-		font-size: 14px
+		+font(12px, 1.7)
 
 	+media('<tab-sm')
 		font-size: 16px
