--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -508,7 +508,25 @@
 	padding:
 		left: round($horizontal-space/2)
 		right: round($horizontal-space/2)
-	margin-bottom: $bottom-space
+
+	&, &:nth-last-child(n+#{$length-in-row+1})
+		margin-bottom: $bottom-space
+
+	&:nth-last-child(-n+#{$length-in-row})
+		margin-bottom: 0
+
+/// использовать если нужно только поменять количество колонок
+=grid-item-responsive($length-in-row: 1, $horizontal-space: 20px, $bottom-space: $horizontal-space)
+	width: round-float(100%/$length-in-row, 2)
+	padding:
+		left: round($horizontal-space/2)
+		right: round($horizontal-space/2)
+
+	&, &:nth-last-child(n+#{$length-in-row+1})
+		margin-bottom: $bottom-space
+
+	&:nth-last-child(-n+#{$length-in-row})
+		margin-bottom: 0
 
 =grid-item-float($length-in-row: 1, $horizontal-space: 20px, $bottom-space: $horizontal-space)
 	float: left
@@ -1008,7 +1026,7 @@
 		//@debug $item
 
 		+media('>=tab-lg')
-			.#{$item}
+			.no-touchevents .#{$item}
 				opacity: 0
 				visibility: hidden
 				transform: translate(0, 60px)
