--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -640,4 +640,22 @@ $btn-menu-lines-color: $text-color !default
 			display: none
 
 /*view print end*/
+
+/* button remove
+.btn-remove
+	transition-property: background-color
+	transition-duration: 0s
+
+	& > span
+		+hide-text
+
+	& > i
+		transition-property: background-color
+		transition-duration: $animation-speed
+
+	.no-touchevents &:hover > i
+		background-color: tomato
+
+
+/* button remove end
 /*buttons end
