--- a/src/sass/components/_depicts.sass
+++ b/src/sass/components/_depicts.sass
@@ -37,4 +37,33 @@
 	&::after
 		transform: rotate(0.25turn)
 
+.depict-remove
+	$this-icon-lines-width: 14px
+	$this-icon-lines-height: 1px
+	$this-icon-lines-color: $text-color
+
+	position: relative
+	+size(24px)
+	background-color: #666
+	backface-visibility: hidden
+	//transition-property: background-color
+	//transition-duration: $animation-speed
+
+	&::before, &::after
+		+pseudo()
+		left: 50%
+		top: 50%
+		+size($this-icon-lines-width, $this-icon-lines-height)
+		margin: -#{round($this-icon-lines-height/2)} 0 0 -#{round($this-icon-lines-width/2)}
+		backface-visibility: hidden
+		background-color: white
+		transition-property: background-color
+		transition-duration: $animation-speed
+
+	&::before
+		transform: rotate(45deg)
+
+	&::after
+		transform: rotate(-45deg)
+
 /* depicts end
