--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -75,6 +75,7 @@
 @import components/products-options
 @import components/catalog-list
 @import components/products-list
+@import components/basket
 @import components/goods-list
 @import components/catalog-menu
 @import components/view-switcher
