--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -211,6 +211,11 @@ $instagram-color-end: #a43b97
 $text-popup-width: 780px !default
 $text-popup-bg-color: $bg-color-light
 
+// product basket
+$product-basket-cell-space: 20px !default
+$product-basket-figure-width: 60px !default
+$product-basket-figure-right-space: 20px !default
+
 // animation
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
