--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -50,12 +50,13 @@
 
 //btn-default-alt
 .btn-default-alt
-	color: $text-color
-	border: 1px solid $text-color
-	background-color: transparent
+	&, .ea-site &
+		color: $text-color
+		border: 1px solid $text-color
+		background-color: transparent
 
-	.no-touchevents &:hover
-		background-color: $bg-color-light
+		.no-touchevents &:hover
+			background-color: $bg-color-light
 
 // btn-more
 .btn-main
@@ -192,19 +193,21 @@
 
 //btn-default-alt
 .btn-outline-alt
-	+font-normal
-	font-size: 12px
-	color: $text-color
-	border: 1px solid $text-color
-	background-color: transparent
+	&, .ea-site &
+		+font-normal
+		+padding-vertical(12px, 10px)
+		font-size: 12px
+		color: $text-color
+		border: 1px solid $text-color
+		background-color: transparent
 
-	& > span
-		letter-spacing: normal
+		& > span
+			letter-spacing: normal
 
-	.no-touchevents &:hover
-		//background: $base-color
-		//border-color: $base-color
-		background-color: $bg-color-light
+		.no-touchevents &:hover
+			//background: $base-color
+			//border-color: $base-color
+			background-color: $bg-color-light
 
 // ea
 //.ea-site &
@@ -257,7 +260,7 @@
 	& > span
 		text-align: left
 		white-space: normal
-		width: calc(100% - #{$arrow-width} - #{$arrow-space})
+		max-width: calc(100% - #{$arrow-width} - #{$arrow-space})
 
 		& ~ i
 			margin-right: 0
@@ -643,8 +646,11 @@ $btn-menu-lines-color: $text-color !default
 
 /* button remove
 .btn-remove
+	background-color: #666
 	transition-property: background-color
-	transition-duration: 0s
+	transition-duration: $animation-speed
+	color: white
+	text-decoration: none
 
 	& > span
 		+hide-text
@@ -653,7 +659,7 @@ $btn-menu-lines-color: $text-color !default
 		transition-property: background-color
 		transition-duration: $animation-speed
 
-	.no-touchevents &:hover > i
+	.no-touchevents &:hover
 		background-color: tomato
 
 
