--- a/src/sass/components/_product-card.sass
+++ b/src/sass/components/_product-card.sass
@@ -137,7 +137,7 @@
 	text-align: center
 	border: solid #d9d9d9
 	border-width: 1px 1px 1px 0
-	transition-property: color, background
+	transition-property: color, background, box-shadow
 	transition-duration: $animation-speed
 
 	&:first-child
