--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -85,6 +85,7 @@
 @import components/map-site
 @import components/product-card
 @import components/text-popup
+@import components/infobar
 
 ///*======================================================*/
 ///*VENDOR*/
